# RaeburnBrainMonorepo

./: .gitignore  Dockerfile  LICENSE  Licence.md  README.md  Raeburn Brain_ Full System Architecture.docx  Raeburn_Overview.txt  alembic.ini  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  main.yml  release.yml
BusinessFactory/: README.md  __init__.py  analytics.py  create_business.py  deadlock_detector.py  graph_viz.py  heartbeat_engine.py  kpi_engine.py  logging_util.py  mission_engine.py  mission_progression.py  mission_queue.py  promotion_pipeline.py  reorg_engine.py  resource_optimizer.py  settings.py  strategy_engine.py
BusinessFactory/tests/: test_create_business.py  test_deadlock_detector.py  test_kpi_engine.py  test_mission_worker.py  test_reorg_engine.py
BusinessFactory/workers/: __init__.py  mission_worker.py
RaeburnBrainAI/: .env.example  pyproject.toml
RaeburnBrainAI/.github/workflows/: ci.yml
RaeburnBrainAI/RaeburnBrainAI/: __init__.py  model_registry.py  router.py  router_request.py  router_stream.py
RaeburnBrainAI/RaeburnBrainAI/config/: __init__.py
RaeburnBrainAI/RaeburnBrainAI/memory/: __init__.py  memory_index.py  memory_injector.py  memory_shards.py  memory_store.py  store.py  template_loader.py
RaeburnBrainAI/RaeburnBrainAI/model/: __init__.py  registry.py
RaeburnBrainAI/RaeburnBrainAI/model_fetchers/: __init__.py  base_fetcher.py  huggingface_fetcher.py  local_fetcher.py  ollama_fetcher.py  openai_fetcher.py  openrouter_fetcher.py
RaeburnBrainAI/RaeburnBrainAI/model_health/: __init__.py  health_metrics.py  model_health.py
RaeburnBrainAI/RaeburnBrainAI/scoring/: __init__.py  hybrid_score.py  scoring_loop.py  scoring_strategy.py
RaeburnBrainAI/RaeburnBrainAI/tests/: test_memory_injector.py  test_meta.py  test_model.py  test_router.py  test_router_stream.py
RaeburnBrainAI/RaeburnBrainAI/utils/: json_utils.py  logging_utils.py  token_utils.py
RaeburnBrainAI/alembic/: env.py
RaeburnBrainAI/alembic/versions/: 0002_create_missions_table.py
RaeburnBrainAI/argocd/: app.yaml
RaeburnBrainAI/docs/: gitops.md
RaeburnBrainAI/helm/raeburn-brain/: Chart.yaml  values.yaml
RaeburnBrainAI/helm/raeburn-brain/templates/: deployment.yaml  secret.yaml
RaeburnBrainAI/k8s/base/: deployment.yaml  prometheus.yaml  service.yaml
RaeburnBrainAI/raeburn_brain/: agent.py  business.py  config.py  core.py  db.py  judging.py  meta.py  model.py
RaeburnBrainAI/raeburn_brain/plugins/: __init__.py
RaeburnBrainAI/raeburn_brain/templates/: dashboard.html
RaeburnBrainAI/tests/: test_config.py  test_fetcher_health.py  test_memory.py  test_memory_store.py  test_meta.py  test_plugins.py  test_prompt.py  test_router_async.py
RaeburnCoder/: Dockerfile  README.md  git-auto-sync.sh
RaeburnCoder/crypto/: crypto_listing.py
RaeburnCoder/deployment/: deploy.py
RaeburnCoder/security/: copyright.py  watermark.py
RaeburnMemory/: .gitignore  CHANGELOG.md  __init__.py  mkdocs.yml  pyproject.toml  requirements.txt
RaeburnMemory/.github/workflows/: ci.yml
RaeburnMemory/api/: __init__.py  memory_api.py
RaeburnMemory/docs/: api.md  index.md
RaeburnMemory/raeburnmemory/: __init__.py  api.py  cli.py  memory_graph.py
RaeburnMemory/store/: __init__.py  fts_backend.py  sqlite_backend.py
RaeburnMemory/tests/: conftest.py  test_api.py  test_cli.py  test_optional_deps.py
RaeburnOrchestrator/: .gitignore  __init__.py  cron_jobs.py  event_bus.py  meta_scheduler.py  pyproject.toml  rules_engine.py
RaeburnOrchestrator/core/: judge.py
RaeburnOrchestrator/runtime/: __init__.py  worker_pool.py
RaeburnOrchestrator/tests/: scoring_plugin.py  test_api.py  test_cli.py  test_judge.py  test_quality.py
RaeburnOrchestrator/utils/: logging.py  uuidgen.py
Raeburn_Coder/: __init__.py  analysis_tools.py  code_tools.py  refactor_engine.py
Scraper/: __init__.py  dom_parser.py  model_extractor.py  url_queue.py  web_scraper.py  yaml
Verifier/: __init__.py  data_cleaner.py  fact_checker.py  json_validator.py  rag_checker.py
agents/: __init__.py  decision_engine.py  identity_engine.py
config/: model_registry.json  models_installed.json  raeburn_env.example
core/: __init__.py  agent.py  agent_manager.py  memory_injector.py  memory_record.py  memory_store.py  router.py  scoring.py
crypto/: nft_opensea.py
deploy/: raeburn-brain.service
k8s/: deployment.yaml  service.yaml
k8s/base/: secret.yaml  (+3 more)
marketplace/: auto_promotion.py
monetization/: monetize.py
raeburn_brain/: __init__.py  comm.py  memory.py  prompt.py  server.py
self_improvement/: self_update.py
src/: api_generation.py  app.py
tests/: __init__.py  test_agent.py  test_agents.py  test_business.py  test_comm.py  test_core.py  test_judging.py  test_memory.py  test_memory_graph.py  test_model.py  test_orchestrator.py  test_router.py  test_server.py  test_utils.py
tools/: commit_push.py  debug_memory.py  debug_registry.py  memory_manage.py  model_fetcher.py  model_health_runner.py  router_benchmark.py
utils/: tracing.py
workers/: __init__.py  llm_worker.py  outreach_worker.py  scraper_worker.py
(+88 files in other folders)
