[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raeburn_brain"
version = "0.1.0"
description = "Raeburn Brain AI core package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Raeburn Brain AI" }
]
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "tinydb>=4.8",
    "psycopg[binary]>=3.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.17",
    "httpx>=0.27",
    "python-multipart>=0.0.6",
    "openai>=1.0",
    "anthropic>=0.3",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "faiss-cpu>=1.11",
    "pgvector>=0.4",
    "opentelemetry-sdk>=1.23",
    "opentelemetry-instrumentation-fastapi",
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["raeburn_brain*"]
exclude = ["tests*"]
